added people information an photos

--- a/people.html
+++ b/people.html
@@ -181,11 +181,12 @@
                 <figure>
                   <img src="assets/images/professionals/alavi2.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                    <p>Asher Alavi is an associate with KTMC’s Whistleblower Representation and False Claims Act Litigation Practice Group</p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -199,11 +200,12 @@
                 <figure>
                   <img src="assets/images/professionals/albert2.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo eligendi.</p>
+                    <p>J. Daniel Albert is a partner of the Firm and focuses on the areas of mergers and acquisitions and shareholder derivative litigation</p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -217,11 +219,12 @@
                 <figure>
                   <img src="assets/images/professionals/alsaleh.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Temporibus dolor, quisquam consectetur molestias, veniam voluptatum. Beatae alias omnis totam.</p>
+                    <p>Sara Alsaleh, a staff attorney of the Firm, currently concentrates her practice at the Firm in the area of securities fraud litigation </p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -240,11 +243,12 @@
                 <figure>
                   <img src="assets/images/professionals/amjed.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                    <p>Naumon A. Amjed, a partner of the Firm, concentrates his practice on new matter development with a focus on analyzing securities class action lawsuits </p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -259,11 +263,12 @@
                   <figure>
                     <img src="assets/images/professionals/baker.jpg" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>Daniel M. Baker, an associate of the Firm, concentrates his practice in the areas of merger and acquisition litigation and shareholder derivative actions</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -278,11 +283,12 @@
                   <figure>
                     <img src="assets/images/professionals/barksdale.png" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>LaMarlon R. Barksdale, a staff attorney of the Firm, was a former Assistant District Attorney in the Philadelphia DA’s Office and veteran of the US Navy</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -301,11 +307,12 @@
                 <figure>
                   <img src="assets/images/professionals/barlieb.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                    <p>Ethan J. Barlieb, a partner of the Firm, concentrates his practice in the areas of ERISA, consumer protection and antitrust litigation</p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -320,11 +327,12 @@
                   <figure>
                     <img src="assets/images/professionals/bell.png" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>Adrienne Bell is an associate of the Firm, concentrates her practice in the areas of securities, derivative, consumer protection, and mergers and acquisition case development</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -339,11 +347,12 @@
                   <figure>
                     <img src="assets/images/professionals/benedict.png" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>Matthew Benedict, an associate of the Firm, concentrates his practice in the area of mergers and acquisition litigation</p>
                       <ul>
-                        <li><a href=""><i class="fa fa-facebook fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter fa-2x"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin fa-2x"></i></a></li>
+                        <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                        <li><a href=""><i class="fas fa-phone"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -362,11 +371,12 @@
                 <figure>
                   <img src="assets/images/professionals/berman.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                    <p>Stuart L. Berman is head of the Firm's global litigation practice</p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -381,11 +391,12 @@
                   <figure>
                     <img src="assets/images/professionals/bocian.png" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>David Bocian, a partner of the Firm, is a former federal prosecutor who leads KTMC’s Whistleblower and False Claims Act Litigation group</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -400,11 +411,12 @@
                   <figure>
                     <img src="assets/images/professionals/calhoun.png" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>Elizabeth W. Calhoun, a staff attorney, concentrates her practice in securities litigation</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -423,11 +435,12 @@
                 <figure>
                   <img src="assets/images/professionals/castaldo.png" alt="" class="img-responsive">
                   <figcaption>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                    <p>Gregory M. Castaldo is a master litigation strategist with over 20 years experience in complex securities fraud cases</p>
                     <ul>
                       <li><a href=""><i class="fas fa-envelope"></i></a></li>
                       <li><a href=""><i class="fas fa-phone"></i></a></li>
                       <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                      <div id="people-read">READ MORE</div>
                     </ul>
                   </figcaption>
                 </figure>
@@ -442,11 +455,12 @@
                   <figure>
                     <img src="assets/images/professionals/check.jpg" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>Darren J. Check, a Partner of the Firm, manages Kessler Topaz’s portfolio monitoring & claims filing service, SecuritiesTracker, and works closely with the Firm’s litigators and new matter development department</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
@@ -461,11 +475,12 @@
                   <figure>
                     <img src="assets/images/professionals/christiansen.png" alt="" class="img-responsive">
                     <figcaption>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+                      <p>Emily N. Christiansen, a partner of the Firm, focuses her practice on securities litigation and non-US actions in particular</p>
                       <ul>
                         <li><a href=""><i class="fas fa-envelope"></i></a></li>
                         <li><a href=""><i class="fas fa-phone"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <div id="people-read">READ MORE</div>
                       </ul>
                     </figcaption>
                   </figure>
