added peoples feature

--- a/people.html
+++ b/people.html
@@ -190,7 +190,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>ASHER S. ALAVI</h4>
+                <div id="people-name">ASHER S. ALAVI</div>
                 <p>ASSOCIATE</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -209,7 +209,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>J. DANIEL ALBERT</h4>
+                <div id="people-name">J. DANIEL ALBERT</div>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -228,7 +228,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>SARA ALSALEH</h4>
+                <div id="people-name">SARA ALSALEH</div>
                 <p>STAFF ATTORNEY</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -252,7 +252,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>NAUMON A. AMJED</h4>
+                <div id="people-name">NAUMON A. AMJED</div>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -272,7 +272,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>DANIEL M. BAKER</h4>
+                  <div id="people-name">DANIEL M. BAKER</div>
                   <p>ASSOCIATE</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -292,7 +292,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>LAMARLON R. BARKSDALE</h4>
+                  <div id="people-name">LAMARLON R. BARKSDALE</div>
                   <p>STAFF ATTORNEY</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -316,7 +316,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>ETHAN J. BARLIEB</h4>
+                <div id="people-name">ETHAN J. BARLIEB</div>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -336,7 +336,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>ADRIENNE P. BELL</h4>
+                  <div id="people-name">ADRIENNE P. BELL</div>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -356,7 +356,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>MATTHEW C. BENEDICT</h4>
+                  <div id="people-name">MATTHEW C. BENEDICT</div>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -380,7 +380,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>STUART L. BERMAN</h4>
+                <div id="people-name">STUART L. BERMAN</div>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -400,7 +400,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>DAVID A. BOCIAN</h4>
+                  <div id="people-name">DAVID A. BOCIAN</div>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -420,7 +420,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>ELIZABETH W. CALHOUN</h4>
+                  <div id="people-name">ELIZABETH W. CALHOUN</div>
                   <p>STAFF ATTORNEY</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -444,7 +444,7 @@
                     </ul>
                   </figcaption>
                 </figure>
-                <h4>GREGORY M. CASTALDO</h4>
+                <div id="people-name">GREGORY M. CASTALDO</div>
                 <p>PARTNER</p>
               </div><!-- /.team-member-->
             </div><!-- /.col-md-4 -->
@@ -464,7 +464,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>DARREN J. CHECK</h4>
+                  <div id="people-name">DARREN J. CHECK</div>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
@@ -484,7 +484,7 @@
                       </ul>
                     </figcaption>
                   </figure>
-                  <h4>EMILY N. CHRISTIANSEN</h4>
+                  <div id="people-name">EMILY N. CHRISTIANSEN</div>
                   <p>PARTNER</p>
                 </div><!-- /.team-member-->
               </div><!-- /.col-md-4 -->
