updated nav bar

--- a/insights.html
+++ b/insights.html
@@ -63,25 +63,23 @@
               <li><a href="#" id="dropdown-people">PEOPLE</a>
               </li>
 
-            <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
+           <li><a href="#" id=practice-areas>PRACTICE AREAS</a>
               <ul class="dropdown">
-                <li><a href="#" id="dropdown-USsecurities">U.S. Securities</a></li>
-                <li><a href="#" id="dropdown-globalsecurities">Global Securities</a></li>
-                  <li><a href="#">Mergers & Acquisitions</a></li>
-                  <li><a href="#">Shareholder Derivative</a></li>
-                  <li><a href="#" id="dropdown-corporategov">Corporate Governance</a></li>
-                  <li><a href="#">Whistleblower Representation</a></li>
-                  <li><a href="#">Consumer Fraud & Rights</a></li>
-                  <li><a href="#">Anti-Trust</a></li>
-                  <li><a href="#">ERISA</a></li>
-                </ul>
+                <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
+                <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
+                <li><a href="#">Mergers & Acquisitions</a></li>
+                <li><a href="#">Shareholder Derivative</a></li>
+                <li><a href="#">Consumer Fraud & Antitrust</a></li>
+                <li><a href="#" id="dropdown-corporategov">Corporate Governance</a></li>
+                <li><a href="#">Whistleblower Representation</a></li>
+              </ul>
             </li>
-
+  
             <li><a href="#">CASES</a>
               <ul class="dropdown">
                 <li><a href="#">Notable</a></li>
-                  <li><a href="#">Settled</a></li>
-                  <li><a href="#">Ongoing</a></li>
+                <li><a href="#">Featured</a></li>
+                <li><a href="#">Ongoing</a></li>
                 </ul>
             </li>
 
