updated awards to be color

--- a/index.html
+++ b/index.html
@@ -270,11 +270,13 @@
         <ul id="clients-list" class="clearfix">
           <li><img src="assets/images/achievements/L500.png" alt="Legal500 logo"></li>
           <li><img src="assets/images/achievements/BTI.jpg" alt="BTI Consulting logo"></li>
-          <li><img src="assets/images/achievements/lawdragon.png" alt="LawDragon logo"></li>
+          <li><img src="assets/images/achievements/lawdragon.jpg" alt="LawDragon logo"></li>
           <li><img src="assets/images/achievements/LegalIntelligencer.jpg" alt="Legal Intelligencer logo"></li>
+          <li><img src="assets/images/achievements/LIdept.png" alt="Legal Intelligencer Dept of year logo"></li>
+          <li><img src="assets/images/achievements/tier-1.png" alt="Benchmark Litigation Tier1 logo"></li>
           <li><img src="assets/images/achievements/BL-Highly-rec.png" alt="Benchmark Litigation HR logo"></li>
           <li><img src="assets/images/achievements/BL-Top-Plaintiff.png" alt="Benchmark Litigation TP logo"></li>
-          <li><img src="assets/images/achievements/PHL.jpg" alt="Plaintiffs Hot List logo"></li>
+          <!-- <li><img src="assets/images/achievements/PHL.jpg" alt="Plaintiffs Hot List logo"></li> -->
         </ul>
       </div>
     </div>
