updated social buttons

--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -219,7 +219,7 @@
         </ul>
       </div>
     </div>
-  </div> 
+  </div><br><br><br>
    <!-- END OF AWARDS CAROUSEL --> 
    <!-- /////////////////////////////////////////// -->
 
@@ -235,8 +235,6 @@
 <!-- END OF SOCIAL MEDIA BUTTONS -->
 <!-- /////////////////////////////////////////// -->
 
-<br><br>
-      
     
  <!-- // JS -->
  <script src="assets/javascript/awards.js"></script>
