--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <br><i class="fa fa-quote-right fa-4x"></i>
   </div>
 
-</div>
+</div><br>
 <!-- END OF TESTIMONIALS SECTION -->
 <!-- /////////////////////////////////////////// -->
 
@@ -280,7 +280,7 @@
         </ul>
       </div>
     </div>
-  </div> <br><br>
+  </div> <br><br><br>
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
