added insights section below carousel

--- a/insights.html
+++ b/insights.html
@@ -132,14 +132,14 @@
    
      <div id="wrapper" data-aos="fade-in">
          <div id="image">
-           <div class="image i1">April Monthly Insights<img src="assets/images/insights/April2020Insights.png" id="imgi1"></div>
+           <div class="image i1">April Monthly Advisor<img src="assets/images/insights/monthlyadvisor.png" id="imgi1"></div>
            <div class="image i2">Fall 2019 Quarterly Bulletin<img src="assets/images/insights/Fall2019.png" id="imgi2"></div>
            <div class="image i3">KTMC Services Brochure<img src="assets/images/insights/FirmBrochure.png" id="imgi3"></div>
            <div class="image i4">KTMC <i>SECURITIESTRACKER</i><img src="assets/images/insights/STpacket.png" id="imgi4"></div>
            <div class="image i5">Primer on Shareholder Litigation<img src="assets/images/insights/Primer.png" id="imgi5"></div>
            <div class="image i6">BENCHMARK 2020 TOP PLAINTIFF FIRM<img src="assets/images/insights/Benchmark2020.jpg" id="imgi6"></div>
-           <div class="image i7">April Monthly Insights<img src="assets/images/insights/April2020Insights.png" id="imgi7"></div>
-           <div class="image i8">April Monthly Insights<img src="assets/images/insights/April2020Insights.png" id="imgi8"></div>
+           <div class="image i7">SECURITIESTRACKER<img src="assets/images/insights/STinvestor.png" id="imgi7"></div>
+           <div class="image i8">April Monthly Advisor<img src="assets/images/insights/April2020Insights.png" id="imgi8"></div>
         </div>
      </div>
    </div> 
@@ -147,8 +147,62 @@
 <!-- END OF INSIGHTS CAROUSEL SECTION  -->
 <!-- /////////////////////////////////////////// -->
 
+<!-- // INSIGHTS DOCUMENT SECTION  -->
+<div class="container">
 
-<br><br><br><br><br<br>
+  <div class="insights-text-section">
+
+  <div class="row" id="row-1">
+    <div class="md-col-12">
+    <i class="fa fa-download" id="download"></i>
+     MONTHLY ADVISOR
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row" id="row-2">
+    <div class="md-col-12">
+    <i class="fa fa-download" id="download"></i>
+      QUARTERLY BULLETIN
+    </div>
+  </div>
+
+  <hr>
+
+
+  <div class="row" id="row-3">
+    <div class="md-col-12">
+    <i class="fa fa-download" id="download"></i>
+      SECURITIESTRACKER
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row" id="row-4">
+    <div class="md-col-12">
+    <i class="fa fa-download" id="download"></i>
+      INVESTOR ST BROCHURE
+    </div>
+  </div>
+
+  <hr>
+
+
+  <div class="row" id="row-5">
+    <div class="md-col-12">
+    <i class="fa fa-download" id="download"></i>
+      PRIMER ON SHAREHOLDER LITIGATION
+    </div>
+  </div>
+
+  </div>
+</div>
+<!-- END OF INSIGHTS DOCUMENT SECTION  -->
+
+
+<br><br><br><br>
 <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
 <div id="social">
