report fraud page

--- a/community.html
+++ b/community.html
@@ -99,7 +99,7 @@
                 <li><a href="#" id="dropdown-offices">Offices</a></li>
                   <li><a href="#">Careers</a></li>
                   <li><a href="#">General Inquiry</a></li>
-                  <li><a href="#">Report Fraud</a></li>
+                  <li><a href="#" id="dropdown-fraud">Report Fraud</a></li>
                   <li><a href="#">Subscribe</a></li>
                 </ul>
             </li>
