added general inquiry page

--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -95,11 +95,11 @@
               </ul>
             </li>
 
-            <li><a href="#">CONTACT</a>
+            <li><a href="#" id="dropdown-contact">CONTACT</a>
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-offices">Offices</a></li>
                   <li><a href="#">Careers</a></li>
-                  <li><a href="#">General Inquiry</a></li>
+                  <li><a href="#" id="dropdown-contact">General Inquiry</a></li>
                   <li><a href="#" id="dropdown-fraud">Report Fraud</a></li>
                   <li><a href="#">Subscribe</a></li>
                 </ul>
