--- a/sustainability.html
+++ b/sustainability.html
@@ -92,12 +92,12 @@
                 <li><a href="#" id="dropdown-conferences">Conferences</a></li>
               </ul>
             </li>
-
-            <li><a href="#">CONTACT</a>
+            
+            <li><a href="#" id="dropdown-contact">CONTACT</a>
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-offices">Offices</a></li>
                   <li><a href="#">Careers</a></li>
-                  <li><a href="#">General Inquiry</a></li>
+                  <li><a href="#" id="dropdown-contact">General Inquiry</a></li>
                   <li><a href="#" id="dropdown-fraud">Report Fraud</a></li>
                   <li><a href="#">Subscribe</a></li>
                 </ul>
