--- a/awardsachievements.html
+++ b/awardsachievements.html
@@ -56,7 +56,6 @@
                   <li><a href="#" id="dropdown-overview">Overview</a></li>
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
-                  <li><a href="#">Landmark Cases</a></li>
                   <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
@@ -80,9 +79,10 @@
   
             <li><a href="#">CASES</a>
               <ul class="dropdown">
-                <li><a href="#">Notable</a></li>
-                <li><a href="#">Featured</a></li>
-                <li><a href="#">Ongoing</a></li>
+                <li><a href="#">New Cases</a></li>
+                <li><a href="#">Current Cases</a></li>
+                <li><a href="#">Settled Cases</a></li>
+                <li><a href="#">Landmark Results</a></li>
                 </ul>
             </li>
 
