--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                   <li><a href="#" id="dropdown-overview">Overview</a></li>
                   <li><a href="#" id="dropdown-testimonials">Testimonials</a></li>
                   <li><a href="#" id="dropdown-community">In the Community</a></li>
-                  <li><a href="#">Landmark Cases</a></li>
                   <li><a href="#" id="dropdown-trialexperience">Trial Experience</a></li>
                   <li><a href="#" id="dropdown-FAQs">FAQs</a></li>
                   <li><a href="#" id="dropdown-sustainability">Sustainability</a></li>
@@ -77,9 +76,10 @@
 
             <li><a href="#">CASES</a>
               <ul class="dropdown">
-                <li><a href="#">Notable</a></li>
-                  <li><a href="#">Featured</a></li>
-                  <li><a href="#">Ongoing</a></li>
+                <li><a href="#">New Cases</a></li>
+                  <li><a href="#">Current Cases</a></li>
+                  <li><a href="#">Settled Cases</a></li>
+                  <li><a href="#">Landmark Results</a></li>
                 </ul>
             </li>
 
@@ -171,7 +171,7 @@
           </li>
           <li>
             <h3>
-              <span>$1B+</span>
+              <span>$20B+</span>
               <span>in client recoveries</span>
             </h3>
           </li>
