updated main landing page to include contact form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/navbar-logo.css">
     <link rel="stylesheet" href="assets/css/video.css">
     <link rel="stylesheet" href="assets/css/whoweare.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/testimonials.css">
     <link rel="stylesheet" href="assets/css/awards.css">
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
@@ -223,7 +224,7 @@
   <div class="view-more-news">View More News</div>
   
 	</div>
-</div><br><br><br><br>
+</div><br><br><br>
   <!-- // END OF NEWS SECTION  -->
 <!-- /////////////////////////////////////////// -->
 
@@ -257,14 +258,15 @@
     <br><i class="fa fa-quote-right fa-4x"></i>
   </div>
 
-</div><br>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!-- END OF TESTIMONIALS SECTION -->
 <!-- /////////////////////////////////////////// -->
 
 
 <!-- /////////////////////////////////////////// -->
 <!-- // BEGINNING AWARDS & ACHIEVEMENTS SECTION  -->
-<div class="container">
+<!-- <div class="container">
   <div id="clients">
       <div class="clients-wrap">
         <ul id="clients-list" class="clearfix">
@@ -276,11 +278,10 @@
           <li><img src="assets/images/achievements/tier-1.png" alt="Benchmark Litigation Tier1 logo"></li>
           <li><img src="assets/images/achievements/BL-Highly-rec.png" alt="Benchmark Litigation HR logo"></li>
           <li><img src="assets/images/achievements/BL-Top-Plaintiff.png" alt="Benchmark Litigation TP logo"></li>
-          <!-- <li><img src="assets/images/achievements/PHL.jpg" alt="Plaintiffs Hot List logo"></li> -->
         </ul>
       </div>
     </div>
-  </div> <br><br><br>
+  </div> <br><br> -->
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
@@ -288,17 +289,21 @@
 
 <!-- /////////////////////////////////////////// -->
 <!-- // UKNOWN SECTION AT THE MOMENT  -->
-<div class="bg-image whiteglobe">
+<div class="bg-image whiteglobe" data-aos="fade-down">
 
   <!-- // contact us  -->
-
+  <form>      
+    <input name="first name" type="text" class="feedback-input" placeholder="First Name" />   
+    <input name="last name" type="text" class="feedback-input" placeholder="Last Name" />   
+    <input name="email" type="text" class="feedback-input" placeholder="Email" />
+    <textarea name="text" class="feedback-input" placeholder="Message*"></textarea>
+    <input type="submit" value="SUBMIT"/>
+  </form>
   <!-- // end of contact us -->
 
 </div>
 <!-- // END OF UKNOWN SECTION AT THE MOMENT  -->
 <!-- /////////////////////////////////////////// -->
-
-
 
 
 <!-- /////////////////////////////////////////// -->
