updated LP contact bottom section

--- a/index.html
+++ b/index.html
@@ -292,13 +292,28 @@
 <div class="bg-image whiteglobe" data-aos="fade-down">
 
   <!-- // contact us  -->
-  <form>      
-    <input name="first name" type="text" class="feedback-input" placeholder="First Name" />   
-    <input name="last name" type="text" class="feedback-input" placeholder="Last Name" />   
-    <input name="email" type="text" class="feedback-input" placeholder="Email" />
-    <textarea name="text" class="feedback-input" placeholder="Message*"></textarea>
-    <input type="submit" value="SUBMIT"/>
-  </form>
+  <div class="contact-LP">
+    CONTACT US 
+  </div>
+
+  <div class="contact-addresses">
+  <span style="color: rgb(140, 170, 20);">Pennsylvania</span> <br>
+  280 King of Prussia Road <br>
+  Radnor, PA 19087 <br>
+  P 610.667.7706 <br>
+  F 610.667.7056 <br><br><br>
+
+  <span style="color: rgb(140, 170, 20);">California </span><br>
+  One Sansome Street <br>
+  Suite 1850 <br>
+  San Francisco, CA 94104 <br>
+  P 415.400.3000 <br>
+  F 415.400.3001 <br>
+  </div><br><br>
+
+  <div class="contact-email">
+    info@ktmc.com
+  </div>
   <!-- // end of contact us -->
 
 </div>
