--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
   </div>
 
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br>
 <!-- END OF TESTIMONIALS SECTION -->
 <!-- /////////////////////////////////////////// -->
 
 
 <!-- /////////////////////////////////////////// -->
 <!-- // BEGINNING AWARDS & ACHIEVEMENTS SECTION  -->
-<!-- <div class="container">
+<div class="container">
   <div id="clients">
       <div class="clients-wrap">
         <ul id="clients-list" class="clearfix">
@@ -281,7 +281,7 @@
         </ul>
       </div>
     </div>
-  </div> <br><br> -->
+  </div> <br><br><br>
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
