--- a/testimonials.html
+++ b/testimonials.html
@@ -123,7 +123,7 @@
 		<h5>What Our Clients & <br>the Courts<br>are Saying</h5>
   </div>
 
-  <blockquote class="block">
+  <blockquote class="block" data-aos="fade-up">
 
 		<p>In stating that "[i]t is difficult to overstate the complexity of [the litigation]." Judge Barbadoro noted the extraordinary effort required to pursue the litigation towards its successful conclusion, which also "put [Plaintiffs] at the cutting edge of a rapidly changing area of law."</p>
 
@@ -134,7 +134,7 @@
   </blockquote>
   
 
-	<blockquote class="block">
+	<blockquote class="block" data-aos="fade-down">
 
 		<span style="color: black"><p>"We are very pleased with the level of services we receive from Kessler Topaz. The Firm's analyses of potential cases have consistently been professional, informative and detailed."</p></span>
 
@@ -144,7 +144,7 @@
 
   </blockquote>
   
-  <blockquote class="block">
+  <blockquote class="block" data-aos="fade-up">
 
 		<p>". . . I am pleased to approve the settlement. I think it does the best that could be done under the circumstances on behalf of the class. . . . The litigation was complex in both liability and damages and required both professional skill and standing which class counsel demonstrated in abundance."</p>
 
@@ -154,7 +154,7 @@
 
 	</blockquote>
 
-	<blockquote class="block">
+	<blockquote class="block" data-aos="fade-down">
 
 		<p>"We like the flexible and professional way Kessler Topaz has been working with us in different cases and their filing of settlement claims is invaluable."</p>
 
@@ -164,7 +164,7 @@
 
 	</blockquote>
 
-	<blockquote class="block">
+	<blockquote class="block" data-aos="fade-up">
 
 		<p>"I know you know that I take this responsibility seriously and try to think hard about these issues. And I do want to compliment class counsel. I think that you behaved responsibly here and gave very good service to the class. They were well served by you."</p>
 
@@ -174,7 +174,7 @@
 
 	</blockquote>
   
-	<blockquote class="block">
+	<blockquote class="block" data-aos="fade-up">
 
 		<p>"The need for our pension to have an experienced law firm advising us of our rights and filing claims on behalf of our fund is greater than ever. I have every confidence in Kessler Topaz and their ability to counsel and represent us in these uncertain financial times."</p>
 
@@ -185,7 +185,7 @@
     </blockquote>		
 
 
-	<blockquote class="block">
+	<blockquote class="block" data-aos="fade-down">
 
 		<p>"Kessler Topaz delivers expertise in litigation on behalf of PKA and provides us with its claims filing service which allows the fund to claim money from settlements, which in the end benefit our members’ pensions."</p>
 
@@ -195,7 +195,7 @@
 
 	</blockquote>
 
-	<blockquote class="block">
+	<blockquote class="block" data-aos="fade-up">
 
 		<p>"The results from Kessler Topaz have been tremendous. Their recovery of significant dollars for our Pension has benefited County taxpayers as well as the Pension members. Kessler Topaz did an exceptional job in representing the pension fund in the Brocade litigation. Their proactive approach, tenacity and professional skills are outstanding."</p>
 
