--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </ul>
       </div>
     </div>
-  </div> <br><br><br>
+  </div> <br><br>
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
