few aesthetic updates

--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@
   </div>
 
   <div class="contact-addresses">
-  <span style="color: rgb(140, 170, 20);">Pennsylvania</span> <br>
+  <span style="color: black; text-decoration: underline">Pennsylvania</span> <br>
   280 King of Prussia Road <br>
   Radnor, PA 19087 <br>
   P 610.667.7706 <br>
   F 610.667.7056 <br><br><br>
 
-  <span style="color: rgb(140, 170, 20);">California </span><br>
+  <span style="color: black; text-decoration: underline">California </span><br>
   One Sansome Street <br>
   Suite 1850 <br>
   San Francisco, CA 94104 <br>
