--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/news.css">
     <link rel="stylesheet" href="assets/css/cont.css">
+    <link rel="stylesheet" href="assets/css/split-sectionLP.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -143,7 +144,6 @@
 <!-- /////////////////////////////////////////// -->
 
 
-
 <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF WHO WE ARE SECTION -->
 <div class="bg-image white">
@@ -153,7 +153,7 @@
 
       <article>
         <h2>Who We Are</h2>
-        <p>KTMC is one of the world’s foremost advocates in protecting the public against corporate fraud and other wrongdoing.  Our lawyers regularly take on the foremost defense attorneys — and win — in class actions, shareholder derivative suits, antitrust litigation and other complex litigation around the globe. We are proud to have recovered billions of dollars for our clients.<div id="about-us-read">Read More</div></p>
+        <p>KTMC is one of the world’s foremost advocates in protecting the public against corporate fraud and other wrongdoing.  Our lawyers regularly take on the foremost defense attorneys — and win — in class actions, shareholder derivative suits, antitrust litigation and other complex litigation around the globe. We are proud to have recovered billions of dollars for our clients.<div id="about-us-read">LEARN MORE</div></p>
       </article>
     
       <aside>
@@ -190,8 +190,8 @@
 
 <!-- /////////////////////////////////////////// -->
 <!-- // BEGINNING OF NEWS SECTION -->
-<div id="latest-headlines" data-aos="fade-down">LATEST HEADLINES</div>
 <div class="container">
+  <div id="latest-headlines" data-aos="fade-down">LATEST HEADLINES</div>
 
   <div class="row smallest-version" data-aos="fade-down">
 
@@ -221,12 +221,44 @@
     
   </div>
 
-  <div class="view-more-news">View More News</div>
+  <div class="view-more-news">MORE FIRM NEWS</div>
   
 	</div>
 </div><br><br><br>
   <!-- // END OF NEWS SECTION  -->
 <!-- /////////////////////////////////////////// -->
+
+
+<!-- /////////////////////////////////////////// -->
+<!-- // BEGINNING OF SPLIT SECTION -->
+<div class="splitview skewed" data-aos="fade-down">
+  <div class="panel bottom">
+      <div class="content">
+          <div class="description">
+              <h1>SETTLEMENT NOTICES</h1>
+              <p>VIEW HERE</p>
+          </div>
+
+          <img src="assets/images/settlement.jpg" alt="Original">
+      </div>
+  </div>
+
+  <div class="panel top">
+      <div class="content">
+          <div class="description">
+              <h1>NEW CASES</h1>
+              <p>VIEW HERE</p>
+          </div>
+
+          <img src="assets/images/cases.jpg" alt="Duotone">
+      </div>
+  </div>
+
+  <div class="handle"></div>
+</div><br><br><br>
+  <!-- // END OF SPLIT SECTION  -->
+<!-- /////////////////////////////////////////// -->
+
 
 
 <!-- /////////////////////////////////////////// -->
@@ -250,8 +282,10 @@
   </div>
 
   <div id="box3" data-aos="fade-right">
+    <div id="box3-text">
     "It was a hard-fought case, and I think that the legal work on this case has just been absolutely spectacular, and I want to brag on all of you for the work that you put into it...
-    <div id="box3-speaker">
+  </div>
+  <div id="box3-speaker">
         - The Honorable Kimberly E. West, United States Magistrate, Judge
         United States District Court for the Eastern District of Oklahoma
     </div>
@@ -281,42 +315,46 @@
         </ul>
       </div>
     </div>
-  </div> <br><br>
+  </div> <br>
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
-
+  
 
 <!-- /////////////////////////////////////////// -->
 <!-- // UKNOWN SECTION AT THE MOMENT  -->
-<div class="bg-image whiteglobe" data-aos="fade-down">
+<div class="bg-image white2" data-aos="fade-down">
 
   <!-- // contact us  -->
   <div class="contact-LP">
     CONTACT US 
   </div>
 
-  <div class="contact-addresses">
+  <div class="contact-addresses1">
   <span style="color: black; text-decoration: underline">Pennsylvania</span> <br>
   280 King of Prussia Road <br>
   Radnor, PA 19087 <br>
   P 610.667.7706 <br>
-  F 610.667.7056 <br><br><br>
+  F 610.667.7056 <br>
+  <div class="contact-email">
+    info@ktmc.com
+  </div><br><br>
+  </div>
 
+  <div class="contact-addresses2">
   <span style="color: black; text-decoration: underline">California </span><br>
   One Sansome Street <br>
   Suite 1850 <br>
   San Francisco, CA 94104 <br>
   P 415.400.3000 <br>
   F 415.400.3001 <br>
-  </div><br><br>
-
   <div class="contact-email">
     info@ktmc.com
   </div>
+  </div><br><br>
   <!-- // end of contact us -->
 
-</div>
+</div><br><br><br><br><br><br><br>
 <!-- // END OF UKNOWN SECTION AT THE MOMENT  -->
 <!-- /////////////////////////////////////////// -->
 
