updated LP sections

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         </ul>
       </div>
     </div>
-  </div> <br>
+  </div> 
    <!-- END OF AWARDS & ACHIEVEMENTS SECTION --> 
    <!-- /////////////////////////////////////////// -->
 
@@ -323,12 +323,12 @@
 
 <!-- /////////////////////////////////////////// -->
 <!-- // UKNOWN SECTION AT THE MOMENT  -->
-<div class="bg-image white2" data-aos="fade-down">
+<!-- <div class="bg-image white2" data-aos="fade-down"> -->
 
   <!-- // contact us  -->
-  <div class="contact-LP">
-    CONTACT US 
-  </div>
+  <!-- <div class="contact-LP"> -->
+    <!-- CONTACT US  -->
+  <!-- </div>
 
   <div class="contact-addresses1">
   <span style="color: black; text-decoration: underline">Pennsylvania</span> <br>
@@ -351,10 +351,10 @@
   <div class="contact-email">
     info@ktmc.com
   </div>
-  </div><br><br>
+  </div><br><br> -->
   <!-- // end of contact us -->
 
-</div><br><br><br><br><br><br><br>
+<!-- </div><br><br><br><br><br><br><br> -->
 <!-- // END OF UKNOWN SECTION AT THE MOMENT  -->
 <!-- /////////////////////////////////////////// -->
 
@@ -366,6 +366,7 @@
 			<a class="twitterBtn smGlobalBtn" href="#" ></a>
       <a class="linkedinBtn smGlobalBtn" href="#" ></a>
       <div id="allRights">KESSLER TOPAZ MELTZER & CHECK, LLP 2020 ALL RIGHTS RESERVED.</div>
+      <div id="offices1">PENNSYLVANIA OFFICE</div>  <div id="offices2">CALIFORNIA OFFICE </div>
 	</div>
 <!-- END OF SOCIAL MEDIA BUTTONS -->
 <!-- /////////////////////////////////////////// -->
